--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
-</html>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		{% block stylesheets %}{% endblock %}
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	</head>
+	<body>
+		<header>
+			<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top ">
+				<div class="container">
+					<a class="navbar-brand" href="#">
+						<a href="{{ path('app') }}"><img id="logo" src="#" alt=""></a>
+					</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="nav_menu">
+						<div class="collapse navbar-collapse" id="navbarResponsive">
+							<ul class="navbar-nav ml-auto">
+								<li class="nav-item active">
+									<a class="nav-link" href="{{ path('app') }}">ACCUEIL
+										<span class="sr-only">(current)</span>
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href=" {{ path('advert_new') }} ">DEPOSER UNE ANNONCE</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href=" {{ path('advert_index') }} ">OFFRES</a>
+								</li>
+								<li class="nav-item">
+									{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+										<a class="nav-link" href="#">
+											{{ app.user.username | upper }}</a>
+										<li class="nav-item">
+											<a class="nav-link" href="{{ path('app_logout') }}">
+												<i style='font-size:14px' class='fas'>&#xf011;</i>
+											</a>
+										</li>
+									{% else %}
+										<a class="nav-link" href="{{ path('app_login') }}">SE CONNECTER</a>
+										<li class="nav-item">
+											<a class="nav-link" href="{{ path('app_register') }}">
+												<i style='font-size:14px' class='fas'>&#xf234;</i>
+											</a>
+										</li>
+									{% endif %}
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</nav>
+		</header>
+		<div class="container"> {% block body %}{% endblock %}
+			</div>
+			{% block javascripts %}{% endblock %}
+		</body>
+	</html>
+</body></html>
